--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -35,6 +35,281 @@
  </div>
 -->
 
+<div class="card clearfix" data-score="60" data-price="14.40">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2RkvtgO"><img src="https://m.media-amazon.com/images/I/81L5fJL5BML._SR400,400_.jpg" alt="Tactical Backpack" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2RkvtgO">LeisonTac Heavy Duty Nylon Stitching | Military ISO Standard | Water Resistant Small Rucksack | Hydration Bladder Compartment | Tactical Backpack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.40</span><span class="ori_price">$35.99</span></address>
+      <p><span>Take <strong>60% off at $35.99</strong> with promo code: <strong>60GMSQPO</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2RkvtgO">Use Code</a>
+  </div>
+</div>
+
+
+<div class="card clearfix" data-score="65" data-price="8.05">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31zJ1te"><img src="https://m.media-amazon.com/images/I/71ZDzw9wddL._SR400,400_.jpg" alt="EverBrite LED Lantern Flashlight" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31zJ1te">EverBrite LED Lantern Flashlight Combo, 2-piece 3 Modes Camping Lanterns Set, Button Glow in Dark, with Batteries Included</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.05</span><span class="ori_price">$22.99</span></address>
+      <p><span>Take <strong>65% off at $22.99</strong> with promo code: <strong>653OCNV3</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/31zJ1te">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="34.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31zD6og"><img src="https://m.media-amazon.com/images/I/71vT7yc2m1L._SR400,400_.jpg" alt="JOLLYVOGUE Weighted Blanket" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31zD6og">JOLLYVOGUE Weighted Blanket for Adult (15lbs, 60''x80''), Twin Size Weighted Blanket Heavy Blanket with 100% Soft Cotton and Glass Beads-Grey</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$34.99</span><span class="ori_price">$69.99</span></address>
+      <p><span>Take <strong>50% off at $69.99</strong> with promo code: <strong>50BS1VF4</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 18, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/31zD6og">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IgRWZ4"><img src="https://m.media-amazon.com/images/I/71Wtx35vqBL._SR400,400_.jpg" alt="Adoric Pillows for Sleeping" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IgRWZ4">Adoric Pillows for Sleeping, Bed Pillows 2 Pack Standard Down Alternative Bed Pillows 100% Cotton</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$29.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+           <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>50% off at $29.99</strong> with promo code: <strong>50AHQJVI</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IgRWZ4">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="13.45">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2II7ynz"><img src="https://m.media-amazon.com/images/I/51ejUb9mWZL._SR400,400_.jpg" alt="Smart Watch" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2II7ynz">Smart Watch, Bluetooth Smartwatch Compatible Smartphone, Fitness Tracker Step Calorie Sleep Sedentary Monitor Qidoou Waterproof Touch Screen</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.45</span><span class="ori_price">$26.89</span></address>
+      <p><span>Take <strong>50% off at $26.89</strong> with promo code: <strong>50OS5LXD</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 20, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2II7ynz">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="10.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WHqsjk"><img src="https://m.media-amazon.com/images/I/71VJPdQkjlL._SR400,400_.jpg" alt="Electric Coffee Grinder" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WHqsjk">Electric Coffee Grinder Portable & Compact Coffee Grinder with Stainless Steel Removable Bowl Up to 12 Cups Fast Grinding</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.79</span><span class="ori_price">$17.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+           <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>40% off at $17.99</strong> with promo code: <strong>40T58YYP</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 15, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WHqsjk">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="27.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ig6wQL"><img src="https://m.media-amazon.com/images/I/71QMoUIUyNL._SR400,400_.jpg" alt="Vacuum Sealer Machine" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ig6wQL">Vacuum Sealer Machine, Toyuugo Automatic Vacuum Air Sealing System Food Sealer with Dry & Moist Food Modes,Sous Vide,Intelligent LED Indicator Lights</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$27.49</span><span class="ori_price">$49.99</span></address>
+      <p><span>Take <strong>45% off at $49.99</strong> with promo code: <strong>45G3TJET</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Ig6wQL">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="7.80">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2RhegVc"><img src="https://m.media-amazon.com/images/I/71wxka5qtmL._SR400,400_.jpg" alt="New iPad 2017/2018 9.7" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2RhegVc">New iPad 2017/2018 9.7 inch Case,Three Layer Full-Body Shockproof Protective Cover Tablet Case for iPad 9.7 (2017/2018 Version) with Handle Stand</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.80</span><span class="ori_price">$25.99</span></address>
+      <p><span>Take <strong>70% off at $25.99</strong> with promo code: <strong>70WJEN4R</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 20, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2RhegVc">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Reh4Tg"><img src="https://m.media-amazon.com/images/I/61vg9omiGlL._SR400,400_.jpg" alt="KOVODA Essential Oil Diffuser" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Reh4Tg">KOVODA Essential Oil Diffuser，235ml Cool Mist Ultrasonic Wood Grain Bluetooth Aromatherapy Humidifier with 7 Color LED Lights Changing</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$29.99</span></address>
+      <p><span>Take <strong>50% off at $29.99</strong> with promo code: <strong>50SU2WHD</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Reh4Tg">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="11.10">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KhQ0BT"><img src="https://m.media-amazon.com/images/I/71JAu7ZXpXL._SR400,400_.jpg" alt="QAUPPE Womens Adult Knitting Mesh Running Sneakers" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KhQ0BT">QAUPPE Womens Adult Knitting Mesh Running Sneakers Fashion Comfortable Student Tennis Walking Shoes US5.5-10 B(M)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.10</span><span class="ori_price">$36.99</span></address>
+      <p><span>Take <strong>70% off at $36.99</strong> with promo code: <strong>70O69BBP</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KhQ0BT">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="49.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2INuG3Q"><img src="https://images-na.ssl-images-amazon.com/images/I/61FH4Q3ALfL._SX679_.jpg" alt="Canway Air Mattress" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2INuG3Q">Canway Air Mattress, Elevated Raised Comfortable Inflatable Airbed with Built-in Electric Pump Queen Size Height 22"</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$49.98</span><span class="ori_price">$99.95</span></address>
+      <p><span>Take <strong>50% off at $99.95</strong> with promo code: <strong>50ICCZ83</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2INuG3Q">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="15.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Kk7XzU"><img src="https://m.media-amazon.com/images/I/61cfV3V3kEL._SR400,400_.jpg" alt="Dual Fast Wireless Charger" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Kk7XzU">Dual Fast Wireless Charger, ZealSound 10W/7.5W/5W 3 Mode Dual Two Fast Charging Pad Wireless Charger with USB 3.0 Adapter for Qi Enabled Watch and Phones (Black)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.99</span><span class="ori_price">$39.98</span></address>
+      <p><span>Take <strong>60% off at $39.98</strong> with promo code: <strong>605OGPOY</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 09, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Kk7XzU">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="7.20">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Rf6LOJ"><img src="https://m.media-amazon.com/images/I/71PK4i6x48L._SR400,400_.jpg" alt="Magic Silicone Dishwashing Gloves" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Rf6LOJ">Magic Silicone Dishwashing Gloves, Pair of Rubber Scrubbing Gloves for Dishes, Wash Cleaning Gloves with Double Sided Sponge Scrubbers</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.20</span><span class="ori_price">$23.99</span></address>
+      <p><span>Take <strong>70% off at $23.99</strong> with promo code: <strong>703TQP3O</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Rf6LOJ">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="13.74">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2F6gYIA"><img src="https://m.media-amazon.com/images/I/714Vo95EshL._SR400,400_.jpg" alt="Bluetooth Headphones" /></a>
