--- a/app/views/guides/gift_guide_01.html.erb
+++ b/app/views/guides/gift_guide_01.html.erb
@@ -26,77 +26,121 @@
           </div>
           <p><a href="#n">But I must explain to you how all this mistaken idea of denouncing pleasure</a></p>
           <span>BY SOMETHING</span>
-
           <div class="pricing">
             <em>$100.00</em>
             <p>$70.00 (30% OFF)</p>
           </div>
+          <div class="btn clearfix">
+            <em>Amazon</em><a href="#n">Buy Now</a>
+          </div>
+        </div>
 
+        <div class="card">
+          <div class="mid_image">
+            <a href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/616sJVZ0ixL._SX679_.jpg" alt="" /></a>
+          </div>
+          <p><a href="#n">But I must explain to you how all this mistaken idea of denouncing pleasure</a></p>
+          <span>BY SOMETHING</span>
+          <div class="pricing">
+            <p>$70.00</p>
+          </div>
+          <div class="btn clearfix">
+            <em>Amazon</em><a href="#n">Buy Now</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="mid_image">
+            <a href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/A185AKfrliL._SX522_.jpg" alt="" /></a>
+          </div>
+          <p><a href="#n">But I must explain to you how all this mistaken idea of denouncing pleasure</a></p>
+          <span>BY SOMETHING</span>
+          <div class="pricing">
+            <em>$100.00</em>
+            <p>$70.00 (30% OFF)</p>
+          </div>
+          <div class="btn clearfix">
+            <em>Amazon</em><a href="#n">Buy Now</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="mid_image">
+            <a href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/91X5-twUCEL._SX522_.jpg" alt="" /></a>
+          </div>
+          <p><a href="#n">But I must explain to you how all this mistaken idea of denouncing pleasure</a></p>
+          <span>BY SOMETHING</span>
+          <div class="pricing">
+            <em>$100.00</em>
+            <p>$70.00 (30% OFF)</p>
+          </div>
+          <div class="btn clearfix">
+            <em>Amazon</em><a href="#n">Buy Now</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="mid_image">
+            <a href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/810ngHHl63L._SX522_.jpg" alt="" /></a>
+          </div>
+          <p><a href="#n">But I must explain to you how all this mistaken idea of denouncing pleasure</a></p>
+          <span>BY SOMETHING</span>
+          <div class="pricing">
+            <em>$100.00</em>
+            <p>$70.00 (30% OFF)</p>
+          </div>
+          <div class="btn clearfix">
+            <em>Amazon</em><a href="#n">Buy Now</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="mid_image">
+            <a href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/61VYkz33WNL._SX522_.jpg" alt="" /></a>
+          </div>
+          <p><a href="#n">But I must explain to you how all this mistaken idea of denouncing pleasure</a></p>
+          <span>BY SOMETHING</span>
+          <div class="pricing">
+            <em>$100.00</em>
+            <p>$70.00 (30% OFF)</p>
+          </div>
+          <div class="btn clearfix">
+            <em>Amazon</em><a href="#n">Buy Now</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="mid_image">
+            <a href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/71uX2g5BzvL._SX522_.jpg" alt="" /></a>
+          </div>
+          <p><a href="#n">But I must explain to you how all this mistaken idea of denouncing pleasure</a></p>
+          <span>BY SOMETHING</span>
+          <div class="pricing">
+            <em>$100.00</em>
+            <p>$70.00 (30% OFF)</p>
+          </div>
+          <div class="btn clearfix">
+            <em>Amazon</em><a href="#n">Buy Now</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="mid_image">
+            <a href="#n"><img src="https://www.uncommongoods.com/images/items/23900/23960_1_640px.jpg" alt="" /></a>
+          </div>
+          <p><a href="#n">But I must explain to you how all this mistaken idea of denouncing pleasure</a></p>
+          <span>BY SOMETHING</span>
+          <div class="pricing">
+            <em>$100.00</em>
+            <p>$70.00 (30% OFF)</p>
+          </div>
           <div class="btn clearfix">
             <em>Amazon</em><a href="#n">Buy Now</a>
           </div>
         </div>
         
-        <div class="card">
-          <div class="mid_image">
-            <img src="https://www.skyfloatx.com/uploads/1/2/4/6/124665177/2_2_orig.jpg" alt="" />
-          </div>
-          <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</p>
-          <div class="btn clearfix">
-            <em>$100.00</em><a href="#n">Buy Now</a>
-          </div>
-        </div>
         
-        <div class="card">
-          <div class="mid_image">
-            <img src="https://images-na.ssl-images-amazon.com/images/I/71ld5uSFhQL._SX522_.jpg" alt="" />
-          </div>
-          <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</p>
-          <div class="btn clearfix">
-            <em>$100.00</em><a href="#n">Buy Now</a>
-          </div>
-        </div>
-        <div class="card">
-          <div class="mid_image">
-            <img src="https://images-na.ssl-images-amazon.com/images/I/A185AKfrliL._SX522_.jpg" alt="" />
-          </div>
-          <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</p>
-          <div class="btn clearfix">
-            <em>$100.00</em><a href="#n">Buy Now</a>
-          </div>
-        </div>
-        <div class="card">
-          <div class="mid_image">
-            <img src="https://grovemade.imgix.net/https%3A%2F%2Fsiteleaf.grovemade.com%2Fuploads%2Fapple-watch-charger-natural-cork-galB-C2.jpg?auto=format&ixlib=python-1.1.2&w=500&s=3a6079950d549e9ce3f4a345763db526" alt="" />
-          </div>
-          <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</p>
-          <div class="btn clearfix">
-            <em>$100.00</em><a href="#n">Buy Now</a>
-          </div>
-        </div>
-      
         
-        <div class="card">
-          <div class="mid_image">
-            <img src="https://images-na.ssl-images-amazon.com/images/I/91X5-twUCEL._SX522_.jpg" alt="" />
-          </div>
-          <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</p>
-          <div class="btn clearfix">
-            <em>$100.00</em><a href="#n">Buy Now</a>
-          </div>
-        </div>
-        <div class="card">
-          <div class="mid_image">
-            <img src="https://images-na.ssl-images-amazon.com/images/I/61VYkz33WNL._SX522_.jpg" alt="" />
-          </div>
-          <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</p>
-          <div class="btn clearfix">
-            <em>$100.00</em><a href="#n">Buy Now</a>
-          </div>
-        </div>
-      </div>
-    
-    </div>
-  </div>
-
+    </div><!--./wrap-->
+  </div><!--./giftail-->
 </div><!--./layout-->
