--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -221,10 +221,30 @@
 /* End Gift Guide Main Page */
 
 
-.gudies_show_wrap{width:1000px;margin:0 auto;}
-.gudies_show_wrap .top_box{margin-top:50px;}
-.gudies_show_wrap .top_box img{float:left;width:31.33%;margin:0 1% 70px 1%;height:300px;object-fit:contain;}
+/* For .gift_guide_02.html.erb */
+.gudies_show_wrap{width:1000px;margin:50px auto 500px auto;font-family: 'Montserrat', sans-serif;}
+.gudies_show_wrap .top_box{float:left;width:31.33%;margin:0 1% 70px 1%;height:300px;}
+.gudies_show_wrap .top_box img{width:100%;height:100%;object-fit:cover;}
+.gudies_show_wrap .top_box .inner{margin-top:15px;}
+.gudies_show_wrap .top_box .inner h2{line-height:1.2;}
+.gudies_show_wrap .top_box .inner strong{font-size:15px;color:#ccc;font-weight:400;}
+.gudies_show_wrap .top_box .inner p{font-size:20px;margin-bottom:35px;display:block;}
+.gudies_show_wrap .top_box .inner em{text-decoration:line-through;font-size:20px;margin:20px 0 0 0;display:block;}
+.gudies_show_wrap .top_box .inner span{background:#000;padding:10px 30px;color:#fff;}
+.gudies_show_wrap .top_box .inner span a{text-decoration:none;color:#08f;text-transform:uppercase;}
 
+
+/* For .gift_guide_03.html.erb */
+.guide_wrapping{width:1000px;margin:50px auto;}
+.guide_wrapping .image_box{float:left;width:45%;margin:0 5% 0 5%;padding:30px;}
+.guide_wrapping .image_box img{width:70%;height:100%;}
+.guide_wrapping .inner{float:left;width:40%;padding:30px;}
+.guide_wrapping .inner h2{line-height:1.2;}
+.guide_wrapping .inner strong{font-size:15px;color:#ccc;font-weight:400;}
+.guide_wrapping .inner p{font-size:20px;margin-bottom:35px;display:block;}
+.guide_wrapping .inner em{text-decoration:line-through;font-size:20px;margin:20px 0 0 0;display:block;}
+.guide_wrapping .inner span{background:#000;padding:10px 30px;color:#fff;}
+.guide_wrapping .inner span a{text-decoration:none;color:#08f;text-transform:uppercase;}
 
 
 
@@ -232,14 +252,13 @@
 .giftail{margin-top:40px;font-family: 'Montserrat', sans-serif;}
 .giftail .card_wrap .inner_wrap{margin:0 0 30px 0;}
 .giftail .card_wrap{column-width:290px;column-gap:15px;}
-.giftail .card_wrap .card{display:inline-block;margin:0 0 30px 0;}
+.giftail .card_wrap .card{display:inline-block;margin:0 0 30px 0;font-family: 'Montserrat', sans-serif;padding:20px 20px 0 20px;border-bottom:1px solid #ccc;}
 .giftail .card_wrap .inner_wrap .inner{border-top:2px solid;border-bottom:2px solid;padding-bottom:20px;text-align:right;line-height:1.3;}
 .giftail .card_wrap .inner_wrap .inner strong{font-size:55px;font-weight:bold;color:#000;}
 .giftail .card_wrap .card .mid_image{margin:5px 0 10px 0;}
 .giftail .card_wrap .card .mid_image img{width:100%;}
 /*.giftail .card_wrap .card .mid_image img{width:100%;-webkit-filter:grayscale(100%);filter:gray;}
 .giftail .card_wrap .card .mid_image img:hover{-webkit-filter:grayscale(0%);filter:none;}*/
-.giftail .card_wrap .card{font-family: 'Montserrat', sans-serif;}
 /*.giftail .card_wrap .card p{margin-bottom:5px;border-bottom:1px solid #ccc;padding-bottom:5px;}*/
 .giftail .card_wrap .card p a{text-decoration:none;color:#3d3d3d;font-size:25px;line-height:1.2;}
 .giftail .card_wrap .card span{display:block;color:#ccc;}
