--- a/app/views/guides/index.html.erb
+++ b/app/views/guides/index.html.erb
@@ -26,19 +26,19 @@
 
         <div class="guide_box">
           <div class="image">
-            <img src="https://grovemade.imgix.net/https%3A%2F%2Fsiteleaf.grovemade.com%2Fuploads%2Fapple-watch-charger-natural-cork-galB-C2.jpg?auto=format&ixlib=python-1.1.2&w=500&s=3a6079950d549e9ce3f4a345763db526">
+            <a href="/guides/gift_guide_02"><img src="https://grovemade.imgix.net/https%3A%2F%2Fsiteleaf.grovemade.com%2Fuploads%2Fapple-watch-charger-natural-cork-galB-C2.jpg?auto=format&ixlib=python-1.1.2&w=500&s=3a6079950d549e9ce3f4a345763db526"></a>
           </div>
           <div class="inner">
             <span>By Oh,igottabuythis,<em>Jun. 16. 2019</em></span>
-            <p>Lotsen Multi-Room Wireless a
-            nd Bluetooth Connected Speaker Lotsen Multi-Room Wireless and Bluetooth Connected Speaker</p>
-            <a class="btn" href="#n">READ MORE</a>
+            <p><a href="/guides/gift_guide_02">Lotsen Multi-Room Wireless a
+            nd Bluetooth Connected Speaker Lotsen Multi-Room Wireless and Bluetooth Connected Speaker</a></p>
+            <a class="btn" href="/guides/gift_guide_02">READ MORE</a>
           </div>
         </div>
 
         <div class="guide_box">
           <div class="image">
-            <img src="https://grovemade.imgix.net/https%3A%2F%2Fsiteleaf.grovemade.com%2Fuploads%2Fapple-watch-charger-natural-cork-galB-C2.jpg?auto=format&ixlib=python-1.1.2&w=500&s=3a6079950d549e9ce3f4a345763db526">
+            <a href="/guides/gift_guide_03"><img src="https://grovemade.imgix.net/https%3A%2F%2Fsiteleaf.grovemade.com%2Fuploads%2Fapple-watch-charger-natural-cork-galB-C2.jpg?auto=format&ixlib=python-1.1.2&w=500&s=3a6079950d549e9ce3f4a345763db526"></a>
           </div>
           <div class="inner">
             <span>By Oh,igottabuythis,<em>Jun. 16. 2019</em></span>
