--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -102,6 +102,185 @@
 </div> 
 -->
 
+<div class="card clearfix" data-score="30" data-price="111.30">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Rf8ovP"><img src="https://images-na.ssl-images-amazon.com/images/I/91mBNqS9GML._UY741_.jpg" alt="Pendleton Men's Penleton Backpack" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Rf8ovP">Pendleton Men's Penleton Backpack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$111.30</span><span class="ori_price">$159.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Rf8ovP">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="38" data-price="74.09">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2RkyTAa"><img src="https://images-na.ssl-images-amazon.com/images/I/718XAq1OQLL._UX679_.jpg" alt="Oakley Mens Men's Utility Backpack" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>38% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2RkyTAa">Oakley Mens Men's Utility Backpack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$74.09</span><span class="ori_price">$120.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2RkyTAa">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="7" data-price="55.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IgkbHq"><img src="https://images-na.ssl-images-amazon.com/images/I/61UkcuGoPvL._SY606_.jpg" alt="Beats urBeats3 Earphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>7% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IgkbHq">Beats urBeats3 Earphones with 3.5 mm Plug - Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$55.99</span><span class="ori_price">$59.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IgkbHq">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="16" data-price="16.82">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WFwjWl"><img src="https://images-na.ssl-images-amazon.com/images/I/71-PEncGUAL._SX522_.jpg" alt="Coffee and Tea Maker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>16% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WFwjWl">Bodum 10938-01B Brazil French Press Coffee and Tea Maker, 34 Ounce, Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$16.82</span><span class="ori_price">$19.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WFwjWl">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="33" data-price="199.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FbUvtv"><img src="https://images-na.ssl-images-amazon.com/images/I/71wj8QWHkcL._UX679_.jpg" alt="Skagen Connected Falster " /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FbUvtv">Skagen Connected Falster 2 Stainless Steel and Silicone Touchscreen Smartwatch with Heart Rate, GPS, NFC, and Smartphone Notifications</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$199.00</span><span class="ori_price">$295.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2FbUvtv">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="159.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31uD1lE"><img src="https://images-na.ssl-images-amazon.com/images/I/61M1mFZNtvL._SY741_.jpg" alt="GrowlerWerks uKeg Pressurized Growler" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31uD1lE">GrowlerWerks uKeg Pressurized Growler, 128 oz, Stainless Steel</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$159.99</span><span class="ori_price">$199.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/31uD1lE">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="13" data-price="129.90">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MJ3Lvd"><img src="https://images-na.ssl-images-amazon.com/images/I/91bjQ-wlJ1L._SX522_.jpg" alt="Maison Lambert Ultimate Shaving Kit" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>13% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MJ3Lvd">Maison Lambert Ultimate Shaving Kit Set with Organic Shaving Soap, Aftershave oil, Wood Shaving Bowl</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$129.90</span><span class="ori_price">$150.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MJ3Lvd">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="13" data-price="79.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IfPqCc"><img src="https://images-na.ssl-images-amazon.com/images/I/81lz%2Bsw2fvL._SX522_.jpg" alt="LEATHERMAN - Super Tool 300 Multitool" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>13% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IfPqCc">LEATHERMAN - Super Tool 300 Multitool with Premium Replaceable Wire Cutters and Saw, Stainless Steel with Leather Sheath</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$79.95</span><span class="ori_price">$92.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IfPqCc">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="47" data-price="45.10">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2RdZChJ"><img src="https://images-na.ssl-images-amazon.com/images/I/71VReoeqwZL._SX679_.jpg" alt="Herschel Novel Duffle Bag" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>47% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2RdZChJ">Herschel Novel Duffle Bag, Black, One Size</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$45.10</span><span class="ori_price">$84.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2RdZChJ">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="19.96">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xg17kP"><img src="https://images-na.ssl-images-amazon.com/images/I/51uW%2B0FBNUL._SX522_.jpg" alt="ThinOPTICS Keychain Reading Glasses" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xg17kP">ThinOPTICS Keychain Reading Glasses, Blue Frame, 1.50 Strength </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$19.96</span><span class="ori_price">$24.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Xg17kP">Shop Now at Amazon</a>
+  </div>
+</div>
 
 <div class="card clearfix" data-score="53" data-price="discounted_price">
   <div class="image_box">
